# easy-file-hash

./: .gitignore  Cargo.toml  README.md
src/: main.rs  style.rs
