[package]
name = "easy-file-hash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
iced = "0.9.0"
iced_native = "0.10.3"
sha2 = "0.10.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
